# prime-rl

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  judge_config.yaml  pyproject.toml  run_eval.sh  run_inference.sh  run_judge.sh  systems_design.md  train.sh
.cursor/: BUGBOT.md
.github/workflows/: gpu_tests.yaml  nightly_tests.yaml
configs/alphabet_sort/: rl.toml
configs/hendrycks_math/: rl.toml
configs/math_group/: rl.toml
configs/multi_reverse_text/: rl.toml
configs/multimodal/: rl_color_codeword.toml
configs/nemotron_4node/: rl.toml
configs/nemotron_debug/: rl.toml
docs/: index.md  logging.md  mint.json  multimodal.md  slurm.md
environments/agent_search/: README.md  agent_search.py  email_env.py  pyproject.toml  system_prompt.txt  system_prompt_thinking.txt  utils.py
environments/agent_search/data/: create_db.py
environments/medical_chat/: custom_judge.py  doc_prompt.txt  judge_prompt.txt  main_env.py  medical_env.py  patient_prompt.txt
examples/Intellect-3.1/: README.md  rl.toml
examples/agent_search/: rl.toml
examples/glm5_pd_disag/: README.md
examples/minimax_m2.5_swe/: README.md
examples/qwen30b_math/: README.md
examples/qwen30b_swe/: README.md
examples/reverse_text/: rl.toml
scripts/: docker-entrypoint.sh  tmux.sh
skills/config/: SKILL.md
skills/entrypoints/: SKILL.md
skills/installation/: SKILL.md
skills/monitor-run/: SKILL.md
skills/release/: SKILL.md
src/prime_rl/: __init__.py  _compat.py
tests/: conftest.py  utils.py
tests/integration/: test_alphabet_sort.py  test_rl.py  test_rl_lora.py  test_sft.py  (+2 more)
(+92 files in other folders)
