[project]
name = "agent-search"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10.dev4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "agent_search.py",
    "email_env.py",
    "utils.py",
    "system_prompt.txt",
    "pyproject.toml",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
